--- a/css/nortification.css
+++ b/css/nortification.css
@@ -9,6 +9,8 @@
     -webkit-border-radius: 5px;
     -khtml-border-radius: 5px;
     border-radius: 5px;
+    margin-top:30px; 
+    margin-bottom:30px;
 }
 .alert-box span {
     font-weight:bold;
