new feature edit user

--- a/css/admin.css
+++ b/css/admin.css
@@ -60,3 +60,7 @@
             padding-left: 100px; 
             
         }
+
+        .fix_nav{margin-top:10%;}
+		.win_by_vipath{padding:3em 0em;text-align: center;margin:1.5em 1em;text-shadow:5px 5px 10px black;font-size:18px; background-color: grey;}
+.wrapper{line-height:12;}
